--- a/TestProject/pom.xml
+++ b/TestProject/pom.xml
@@ -75,6 +75,11 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
 
     </dependencies>
